# mc-suite

./: .gitignore  Cargo.toml  README.md  cross.sh  launch-tmux.sh  launch.sh  minecraft.sh
mc-boot/: Cargo.toml
mc-boot/src/: main.rs
mc-sync/: Cargo.toml
mc-sync/src/: main.rs
src/: disc.rs  event.rs  main.rs  server.rs  state.rs
