[workspace]
members = [
    "mc-boot",
    "mc-sync",
]

[workspace.dependencies]
anyhow = "1.0"
joinery = "3.1"
regex = "1.10"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.39", features = ["io-std", "io-util", "macros", "net", "process", "rt", "sync"] }
