[package]
name = "mc-boot"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rusoto_core = { version = "0.46", default_features = false, features = ["rustls"] }
rusoto_ec2 = { version = "0.46", default_features = false, features = ["rustls"] }
serenity = "0.10"
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "net", "rt", "sync", "time"] }
