[package]
name = "mc-boot"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
rusoto_core = { version = "0.46", default-features = false, features = ["rustls"] }
rusoto_ec2 = { version = "0.46", default-features = false, features = ["rustls"] }
serenity = { workspace = true, features = ["cache"] }
tokio.workspace = true
