[package]
name = "mc-sync"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
joinery = "2.0"
once_cell = "1.5"
regex = "1.2"
serenity = "0.10"
structopt = "0.3"
tokio = { version = "1.0", features = ["io-std", "io-util", "macros", "net", "process", "rt", "sync"] }
