[package]
name = "mc-sync"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
joinery.workspace = true
regex.workspace = true
serenity.workspace = true
tokio.workspace = true
